changing step 0 arrow icon font size when debug-panel is open to prevent overflow

--- a/js/styles/viewer/signs.less
+++ b/js/styles/viewer/signs.less
@@ -110,6 +110,19 @@
   }
 }
 
+#viewer-app.with-debug-panel {
+  .step-current {
+    .sign-wrapper {
+      .sign {
+        .circle {
+          font-size: 1vw;
+          line-height: 1vw;
+        }
+      }
+    }
+  }
+}
+
 .step-2 {
   .sign-wrapper {
     width: 20%;
